traces/bug_391.txt
src/bamglib/Mesh2.cpp:434: error: DEAD_STORE
  The value written to &cas (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:434:18: Write of unused value
432.   	         l1 = (BC,BC);
433.   	         s = 0;
434.                    cas = -1;
                        ^
435.   		 //	 cout << " ABAC " <<  ABAC << " ABAC " << ABAC
436.   		 //	      << " AB2 " << AB2 << endl;
